--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+Privacy Policy
+This policy applies to all information collected or submitted on info.hafizmohdrozlan@gmail email and Gears Connect app made by Hafiz Mohd Rozlan for iPhone and any other devices and platforms.
+
+Information we collect for ads and analytics
+Gears Connect app collects aggregate, anonymous statistics, such as the percentage of users who use particular features, to improve the app.
+
+No personal data is used to target Gears Connect’s ads.
+
+Gears Connect is utilizing Unity3D services for its analytic and ads service, you can refer Unity3D privacy policy here, https://unity3d.com/legal/privacy-policy
+
+Information usage
+We do not share personal information with outside parties. We may share anonymous, aggregate statistics with outside parties, such as how many people listen to a particular podcast with Overcast.
+
+We may disclose your information in response to subpoenas, court orders, or other legal requirements; to exercise our legal rights or defend against legal claims; to investigate, prevent, or take action regarding illegal activities, suspected fraud or abuse, violations of our policies; or to protect our rights and property.
+
+In the future, we may sell to, buy, merge with, or partner with other businesses. In such transactions, user information may be among the transferred assets.
+
+Children’s Online Privacy Protection Act Compliance
+We never collect or maintain information at our website from those we actually know are under 13, and no part of our website is structured to attract anyone under 13.
+
+Information for European Union Customers
+By using Overcast and providing your information, you authorize us to collect, use, and store your information outside of the European Union.
+
+International Transfers of Information
+Information may be processed, stored, and used outside of the country in which you are located. Data privacy laws vary across jurisdictions, and different laws may be applicable to your data depending on where it is processed, stored, or used.
+
+Your Consent
+By using our site or apps, you consent to our privacy policy.
+
+Contacting Us
+If you have questions regarding this privacy policy, you may email info.hafizmohdrozlan@gmail.com.
+
+Changes to this policy
+If we decide to change our privacy policy, we will post those changes on this page. Summary of changes so far:
+
+August 4, 2019: First published.
