--- a/index.html
+++ b/index.html
@@ -1,87 +1,119 @@
-Privacy Policy
-This policy applies to all information collected or submitted on info.hafizmohdrozlan@gmail email and Gears Connect app made by Hafiz Mohd Rozlan for iPhone and any other devices and platforms.
-
-Information we collect for ads and analytics
-Gears Connect app collects aggregate, anonymous statistics, such as the percentage of users who use particular features, to improve the app.
-
-No personal data is used to target Gears Connect’s ads.
-
-Gears Connect is utilizing Unity3D services for its analytic and ads service, you can refer Unity3D privacy policy here, https://unity3d.com/legal/privacy-policy
-
-Information usage
-We do not share personal information with outside parties. We may share anonymous, aggregate statistics with outside parties, such as how many people listen to a particular podcast with Overcast.
-
-We may disclose your information in response to subpoenas, court orders, or other legal requirements; to exercise our legal rights or defend against legal claims; to investigate, prevent, or take action regarding illegal activities, suspected fraud or abuse, violations of our policies; or to protect our rights and property.
-
-In the future, we may sell to, buy, merge with, or partner with other businesses. In such transactions, user information may be among the transferred assets.
-
-Children’s Online Privacy Protection Act Compliance
-We never collect or maintain information at our website from those we actually know are under 13, and no part of our website is structured to attract anyone under 13.
-
-Information for European Union Customers
-By using Overcast and providing your information, you authorize us to collect, use, and store your information outside of the European Union.
-
-International Transfers of Information
-Information may be processed, stored, and used outside of the country in which you are located. Data privacy laws vary across jurisdictions, and different laws may be applicable to your data depending on where it is processed, stored, or used.
-
-Your Consent
-By using our site or apps, you consent to our privacy policy.
-
-Contacting Us
-If you have questions regarding this privacy policy, you may email info.hafizmohdrozlan@gmail.com.
-
-Changes to this policy
-If we decide to change our privacy policy, we will post those changes on this page. Summary of changes so far:
-
-August 4, 2019: First published.
-
-
-# Welcome to StackEdit!
-
-Hi! I'm your first Markdown file in **StackEdit**. If you want to learn about StackEdit, you can read me. If you want to play with Markdown, you can edit me. Once you have finished with me, you can create new files by opening the **file explorer** on the left corner of the navigation bar.
-
-
-# Files
-
-StackEdit stores your files in your browser, which means all your files are automatically saved locally and are accessible **offline!**
-
-## Create files and folders
-
-The file explorer is accessible using the button in left corner of the navigation bar. You can create a new file by clicking the **New file** button in the file explorer. You can also create folders by clicking the **New folder** button.
-
-## Switch to another file
-
-All your files and folders are presented as a tree in the file explorer. You can switch from one to another by clicking a file in the tree.
-
-## Rename a file
-
-You can rename the current file by clicking the file name in the navigation bar or by clicking the **Rename** button in the file explorer.
-
-## Delete a file
-
-You can delete the current file by clicking the **Remove** button in the file explorer. The file will be moved into the **Trash** folder and automatically deleted after 7 days of inactivity.
-
-## Export a file
-
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
-
-
-# Synchronization
-
-Synchronization is one of the biggest features of StackEdit. It enables you to synchronize any file in your workspace with other files stored in your **Google Drive**, your **Dropbox** and your **GitHub** accounts. This allows you to keep writing on other devices, collaborate with people you share the file with, integrate easily into your workflow... The synchronization mechanism takes place every minute in the background, downloading, merging, and uploading file modifications.
-
-There are two types of synchronization and they can complement each other:
-
-- The workspace synchronization will sync all your files, folders and settings automatically. This will allow you to fetch your workspace on any other device.
-	> To start syncing your workspace, just sign in with Google in the menu.
-
-- The file synchronization will keep one file of the workspace synced with one or multiple files in **Google Drive**, **Dropbox** or **GitHub**.
-	> Before starting to sync files, you must link an account in the **Synchronize** sub-menu.
-
-## Open a file
-
-You can open a file from **Google Drive**, **Dropbox** or **GitHub** by opening the **Synchronize** sub-menu and clicking **Open from**. Once opened in the workspace, any modification in the file will be automatically synced.
-
-## Save a file
-
-You can save any file of the workspace to **Google Drive**, **Dropbox** or **GitHub** by opening the **Synchronize** sub-menu and clicking **Save on**. Even if a file in the workspace is already synced, you can save it to another location. StackEdit can sync one file with multiple locations and accounts.
+<!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset='utf-8'>
+      <meta name='viewport' content='width=device-width'>
+      <title>Privacy Policy</title>
+      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    </head>
+    <body>
+    <h2>Privacy Policy</h2> <p>
+                    Hafiz Mohd Rozlan built the Gears Connect app as
+                    an Ad Supported app. This SERVICE is provided by
+                    Hafiz Mohd Rozlan at no cost and is intended for
+                    use as is.
+                  </p> <p>
+                    This page is used to inform visitors regarding
+                    my policies with the collection, use, and
+                    disclosure of Personal Information if anyone decided to use
+                    my Service.
+                  </p> <p>
+                    If you choose to use my Service, then you agree
+                    to the collection and use of information in relation to this
+                    policy. The Personal Information that I collect is
+                    used for providing and improving the Service.
+                    I will not use or share your
+                    information with anyone except as described in this Privacy
+                    Policy.
+                  </p> <p>
+                    The terms used in this Privacy Policy have the same meanings
+                    as in our Terms and Conditions, which is accessible at
+                    Gears Connect unless otherwise defined in this Privacy
+                    Policy.
+                  </p> <p><strong>Information Collection and Use</strong></p> <p>
+                    For a better experience, while using our Service,
+                    I may require you to provide us with certain
+                    personally identifiable information. The
+                    information that I request will be
+                    retained on your device and is not collected by me in any way.
+                  </p> <p>
+                    The app does use third party services that may collect
+                    information used to identify you.
+                  </p> <div><p>
+                      Link to privacy policy of third party service providers
+                      used by the app
+                    </p> <ul><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank">Unity3D</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                    I want to inform you that whenever
+                    you use my Service, in a case of an error in the
+                    app I collect data and information (through third
+                    party products) on your phone called Log Data. This Log Data
+                    may include information such as your device Internet
+                    Protocol (“IP”) address, device name, operating system
+                    version, the configuration of the app when utilizing
+                    my Service, the time and date of your use of the
+                    Service, and other statistics.
+                  </p> <p><strong>Cookies</strong></p> <p>
+                    Cookies are files with a small amount of data that are
+                    commonly used as anonymous unique identifiers. These are
+                    sent to your browser from the websites that you visit and
+                    are stored on your device's internal memory.
+                  </p> <p>
+                    This Service does not use these “cookies” explicitly.
+                    However, the app may use third party code and libraries that
+                    use “cookies” to collect information and improve their
+                    services. You have the option to either accept or refuse
+                    these cookies and know when a cookie is being sent to your
+                    device. If you choose to refuse our cookies, you may not be
+                    able to use some portions of this Service.
+                  </p> <p><strong>Service Providers</strong></p> <p>
+                    I may employ third-party companies
+                    and individuals due to the following reasons:
+                  </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
+                    I want to inform users of this
+                    Service that these third parties have access to your
+                    Personal Information. The reason is to perform the tasks
+                    assigned to them on our behalf. However, they are obligated
+                    not to disclose or use the information for any other
+                    purpose.
+                  </p> <p><strong>Security</strong></p> <p>
+                    I value your trust in providing us
+                    your Personal Information, thus we are striving to use
+                    commercially acceptable means of protecting it. But remember
+                    that no method of transmission over the internet, or method
+                    of electronic storage is 100% secure and reliable, and
+                    I cannot guarantee its absolute security.
+                  </p> <p><strong>Links to Other Sites</strong></p> <p>
+                    This Service may contain links to other sites. If you click
+                    on a third-party link, you will be directed to that site.
+                    Note that these external sites are not operated by
+                    me. Therefore, I strongly advise you to
+                    review the Privacy Policy of these websites.
+                    I have no control over and assume no
+                    responsibility for the content, privacy policies, or
+                    practices of any third-party sites or services.
+                  </p> <p><strong>Children’s Privacy</strong></p> <p>
+                    These Services do not address anyone under the age of 13.
+                    I do not knowingly collect personally
+                    identifiable information from children under 13. In the case
+                    I discover that a child under 13 has provided
+                    me with personal information,
+                    I immediately delete this from our servers. If you
+                    are a parent or guardian and you are aware that your child
+                    has provided us with personal information, please contact
+                    me so that I will be able to do
+                    necessary actions.
+                  </p> <p><strong>Changes to This Privacy Policy</strong></p> <p>
+                    I may update our Privacy Policy from
+                    time to time. Thus, you are advised to review this page
+                    periodically for any changes. I will
+                    notify you of any changes by posting the new Privacy Policy
+                    on this page. These changes are effective immediately after
+                    they are posted on this page.
+                  </p> <p><strong>Contact Us</strong></p> <p>
+                    If you have any questions or suggestions about
+                    my Privacy Policy, do not hesitate to contact
+                    me at info.hafizmohdrozlan@gmail.com.
+                  </p> <p>
+    </body>
+    </html>
+      
