--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
     <h2>Privacy Policy</h2> <p>
                     Hafiz Mohd Rozlan built the Gears Connect app as
-                    an Ad Supported app. This SERVICE is provided by
-                    Hafiz Mohd Rozlan at no cost and is intended for
+                    an Ad Supported app with in-app purchase to remove ad. This SERVICE is provided by
+                    Hafiz Mohd Rozlan and is intended for
                     use as is.
                   </p> <p>
                     This page is used to inform visitors regarding
