--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,16 @@
-<div class="about">
-			<h1>About</h1>
-			<p>Wombatman Games is a micro game development studio consist of hobbyist game developers who are aspiring to turn game development into a serious business. We are based in Klang Valley.</p>
-		</div>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>about wombatman games</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>About</h1>
+				<p>Wombatman Games is a micro game development studio consist of hobbyist game developers who are aspiring to turn game development into a serious business. We are based in Klang Valley.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+	</body>
+</html>
