--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,23 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+    		</ul>
+		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>About</h1>
 				<p>Wombatman Games is a micro game development studio consist of hobbyist game developers who are aspiring to turn game development into a serious business. We are based in Klang Valley.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li>email</li>
+        		<li><a href="mailto:wombatmangames@gmail.com">wombatmangames@gmail.com</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
